scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/halfacyclic/a/package.scala
package success.halfacyclicpackage

package object a {
  import acyclic.pkg
}
