scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/a/package.scala
package fail.cyclicpackage

package object a {
  import acyclic.pkg
}
